packing: generate CHECK_PACKED_FIELDS_N definitions via Kbuild
Currently <linux/packing.h> includes 20K lines of macro definitions for
CHECK_PACKED_FIELDS_1 through CHECK_PACKED_FIELDS_50. These macros are
necessary to perform compile-time checks on packed field arrays. They are
generated via some simple C code, but currently committed to the header
file directly.

Instead, move these definitions into a separate
<generated/packing-checks.h> header file which we include. Use Kbuild to
generate a gen_packing_checks program which outputs the contents. This way,
we do not need to commit 20k lines to the <linux/packing.h> header, and we
can easily change the number of definitions generated by updating the
lib/gen_packing_checks.c host program file.

Signed-off-by: Jacob Keller <jacob.e.keller@intel.com>

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -324,6 +324,19 @@ quiet_cmd_crc64 = GEN     $@
 $(obj)/crc64table.h: $(obj)/gen_crc64table
 	$(call cmd,crc64)
 
+# Generate packing-checks.h
+
+hostprogs += gen_packing_checks
+
+packing-checks := ../include/generated/packing-checks.h
+
+filechk_gen_packing_checks = $(obj)/gen_packing_checks
+
+$(obj)/$(packing-checks): $(obj)/gen_packing_checks FORCE
+	$(call filechk,gen_packing_checks)
+
+always-y += $(packing-checks)
+
 #
 # Build a fast OID lookip registry from include/linux/oid_registry.h
 #
